package com.devsenior.nmanja.sales_project.models.entities;

public enum OrderStatus {

    PENDING , SENT , RECEIVED
    
}
